--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -102,12 +102,17 @@
 .card h3 {
   margin: 0 0 1rem 0;
   font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.card div {
+  font-size: 0.8rem;
 }
 
 .card p {
   margin: 0;
   font-size: 0.8rem;
-  line-height: 1.5;
+  line-height: 0.8rem;
 }
 
 .logo {
