--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -97,6 +97,8 @@
 .card:active {
   color: #0070f3;
   border-color: #0070f3;
+  cursor: pointer;  
+  box-shadow: 0px 0px 20px #80808080;
 }
 
 .card h3 {
